k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-deployment
  namespace: default
  labels:
    app: genesis
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: genesis
  template:
    metadata:
      labels:
        app: genesis
    spec:
      containers:
      - name: genesis
        image: nginx:1.26
        ports:
        - containerPort: 80
