k8s/genesis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genesis-app-service
spec:
  type: NodePort
  selector:
    app: genesis-app
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80   
      nodePort: 30080
